--- a/views/collegedetail.html
+++ b/views/collegedetail.html
@@ -27,29 +27,7 @@
     </div>
   </div>
 </section>
-<!-- End breadcrumb -->
-  <div class="card-body">
-      <div class="row">
-          <div class="col-sm-6">
-            <div class="card">
-              <div class="card-body">
-                  <img src="../static/uploads/<%=listcollege.img%>" width="80%">
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
-                    <h1><%=listcollege.name%><h1>
-                  <span><%=listcollege.city%>,<%=listcollege.state%></span>
-                  <span><%=listcollege.email%>,<%=listcollege.contact%></span>
-                  <span><%=listcollege.pincode%>,<%=listcollege.type_id%></span>
-                </div>
-              </div>
-            </div>
-      </div>
-  <hr>
-</div>
+
 
 <section id="mu-course-content">
   <div class="container">
@@ -57,14 +35,14 @@
       <div class="col-md-12">
         <div class="mu-course-content-area">
            <div class="row">
-             <div class="col-md-9">
+             <div class="col-md-12">
                <!-- start course content container -->
                <div class="mu-course-container mu-course-details">
                  <div class="row">
                    <div class="col-md-12">
                      <div class="mu-latest-course-single">
-                       <figure class="mu-latest-course-img">
-                         <a href="#"><img src="../static/uploads/<%=listcollege.img%>" alt="img">
+                       <figure class="mu-latest-course-img text-center">
+                         <img src="\static\uploads\<%=listcollege.img%>" alt="img">
                        </figure>
                        <div class="mu-latest-course-single-content">
                          <h2><a href="/app/cdetail/<%=listcollege.id%>"><%=listcollege.name%></a></h2>
@@ -76,57 +54,6 @@
                            <li> <span>Contact</span> <span><%=listcollege.contact%></span></li>
                            <li> <span>Pin Code</span> <span><%=listcollege.pincode%></span></li>
                          </ul>
-                         <h4>Course Outline</h4>
-                         <div class="table-responsive">
-                           <table class="table">
-                           <thead>
-                             <tr>
-                               <th> Title </th>
-                               <th> Course Time </th>
-                               <th> Spent Time </th>
-                               <th> Status </th>
-                             </tr>
-                           </thead>
-                           <tbody>
-                             <tr>
-                               <td> 1. Topic 1 </td>
-                               <td> 15:30 </td>
-                               <td> 13:80 </td>
-                               <td> Successful </td>
-                             </tr>
-                             <tr>
-                               <td> 2. Topic 2 </td>
-                               <td> 15:30 </td>
-                               <td> 13:80 </td>
-                               <td> Successful </td>
-                             </tr>
-                             <tr>
-                               <td> 3. Topic 3 </td>
-                               <td> 15:30 </td>
-                               <td> - </td>
-                               <td> Successful </td>
-                             </tr>
-                             <tr>
-                               <td> 4. Topic 4 </td>
-                               <td> 15:30 </td>
-                               <td> 13:80 </td>
-                               <td> Successful </td>
-                             </tr>
-                             <tr>
-                               <td> 5. Topic 5 </td>
-                               <td> 15:30 </td>
-                               <td> - </td>
-                               <td> Waiting </td>
-                             </tr>
-                             <tr>
-                               <td> 6. Topic 6 </td>
-                               <td> 15:30 </td>
-                               <td> 13:80 </td>
-                               <td> - </td>
-                             </tr>
-                           </tbody>
-                         </table>
-                         </div>
                        </div>
                      </div> 
                    </div>                                   
