--- a/views/listcolleges.html
+++ b/views/listcolleges.html
@@ -29,7 +29,7 @@
                     <div class="mu-contact-content">           
                         <div class="row">
                             <div class="col-md-9">
-                                <% for(var i in listcollege) { %>
+                                <% for(var i in listcollege ) { %>
                                     <div class="card-body">
                                         <div class="row">
                                             <div class="col-sm-6">
@@ -42,6 +42,7 @@
                                             <div class="col-sm-6">
                                                 <div class="card">
                                                   <div class="card-body">
+                                                    <%=collegespec[i].spec_score%>
                                                     <a href="/app/cdetail/<%= listcollege[i].id %>"><h1><%=listcollege[i].name%><h1></a>
                                                     <span><%=listcollege[i].city%>,<%=listcollege[i].state%></span>
                                                   </div>
@@ -55,7 +56,6 @@
                           <div class="col-md-3">
                             <div class="mu-contact-right">
                               <form class="contactform " method="get" action="/app/showorderedcolleges">                  
-                                
                                 <p><label data-toggle="tooltip" title="Represents your budget">Fee Upper Range</label>
                                 </p><p><input type="text"> </input></p>
                                 <hr class="style1">
