--- a/views/showorderedcolleges.html
+++ b/views/showorderedcolleges.html
@@ -43,6 +43,9 @@
                                             <div class="col-sm-6">
                                                 <div class="card">
                                                   <div class="card-body">
+                                                    <div class="label"></div>
+                                                    <%=collegespec[i]%>  ----
+                                                    <%=normalscore[i].spec_score%>
                                                       <a href="/app/cdetail/<%= squery1[i].id %>"><h1><%=squery1[i].name%><h1></a>
                                                     <span><%=squery1[i].city%>,<%=squery1[i].state%></span>
                                                   </div>
